services/tts/production/01-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tts-frontend-deployment
  namespace: tts
  annotations:
    keel.sh/policy: "force"
    keel.sh/match-tag: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tts-frontend
  template:
    metadata:
      labels:
        app: tts-frontend
    spec:
      containers:
      - name: tts-fe
        image: registry.niaefeup.pt/niaefeup/tts-fe:main
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: harbor-pull-secret
---
apiVersion: v1
kind: Service
metadata:
  name: tts-frontend-service
  namespace: tts
spec:
  selector:
    app: tts-frontend
  ports:
  - port: 80
    targetPort: 80
  type: "ClusterIP"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tts-backend-deployment
  namespace: tts
  annotations:
    keel.sh/policy: "force"
    keel.sh/match-tag: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tts-backend
  template:
    metadata:
      labels:
        app: tts-backend
    spec:
      containers:
      - name: tts-be
        image: registry.niaefeup.pt/niaefeup/tts-be:main
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: harbor-pull-secret
---
apiVersion: v1
kind: Service
metadata:
  name: tts-backend-service
  namespace: tts
spec:
  selector:
    app: tts-backend
  ports:
  - port: 80
    targetPort: 8000
  type: "ClusterIP"
